src/main/java/com/example/demo/global/error/exception/StoryException.java
package com.example.demo.global.error.exception;

import com.example.demo.global.error.ErrorCode;

public class StoryException extends BusinessException{

    public StoryException(ErrorCode errorcode){
        super(errorcode);
    }

}